[Improve] jvm opt improvement (#4010)